test/Inputs/header_7C.llzk
// Imported via `include_fail.llzk`

module attributes {veridise.lang = "llzk"} {
  // expected-error@+1 {{found cyclic include}}
  include.from "Inputs/header_7A.llzk" as @cycle

  function.def private @func_in_7c()
}
